# BloodyBossConfig

./: .buildinfo  .gitignore  README-THUNDERSTORE.md  README.md  example-bosses.json  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  thunderstore.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  dev-build.yml  release-thunderstore.yml  release.yml
docs/: ARCHITECTURE.md  BUILD-WINDOWS.md  FUNCTIONAL_SPEC.md  MCP_INTEGRATION.md  MECHANICS_REFERENCE.md  PROJECT_SETUP.md  UI_MOCKUP.md
scripts/: convert_items_database.py  convert_vblood_database_v2.py
src/: App.tsx
src-tauri/: Cargo.toml  nsis-installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/components/: AbilityRecommendationsModal.tsx  AbilitySelector.tsx  BossForm.tsx.bak  ItemSelector.tsx  Layout.tsx  MechanicFormModal.tsx  MechanicHelpButton.tsx  MechanicHelpModal.tsx  MechanicsList.tsx  PrefabSelector.tsx  RealBossForm.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  (+10 more)
src/config/: mechanicParameters.ts
src/data/: itemsDatabase.ts  mechanicsHelp.ts  vbloodDatabase.ts
src/pages/: BossEdit.tsx  BossList.tsx  BossNew.tsx  Dashboard.tsx  Mechanics.tsx  Settings.tsx
src/schemas/: boss.schema.ts  realBoss.schema.ts
src/services/: boss.service.ts  config.service.ts
src/store/: boss.store.ts
src/styles/: App.css
src/types/: bepinex-config.ts  boss.ts  config.ts  index.ts  mechanics.ts
src/utils/: abilityCompatibility.ts
